--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,19 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go }}
-          # cache-dependency-path: "**/go.sum"
+          cache: false # managed by golangci-lint
 
       - name: Download Dependencies
         run: |
           go mod download
+
+      - name: Install golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          args: --version
+
+      - name: Lint & Build
+        run: |
           make lint
           make build
