fix: amend ci workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,8 +3,7 @@ name: Go
 on:
   push:
     branches: ["main"]
-    paths-ignore: [
-    "README.*", "LICENSE", "assets/**"]
+    paths-ignore: ["README.*", "LICENSE", "assets/**"]
   workflow_dispatch:
 
 jobs:
