fix: ci path error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,11 @@ jobs:
         with:
           node-version: "18"
 
-      - name: Enter the directory
-        run: cd docs/go-gin-boilerplate
-
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
+      - name: Install & Build
+        run: |
+          cd docs/go-gin-boilerplate 
+          npm install
+          npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
