docs: add guide/config

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - docs
     paths:
       - "docs/go-gin-boilerplate/**"
       - ".github/workflows/deploy.yml"
