--- a/docs/go-gin-boilerplate/package.json
+++ b/docs/go-gin-boilerplate/package.json
@@ -12,17 +12,21 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "tailwind": "npx tailwindcss -i ./src/css/custom.css -o ./src/css/tailwind.css --watch"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.0",
     "@docusaurus/plugin-sitemap": "^3.1.0",
     "@docusaurus/preset-classic": "3.1.0",
     "@mdx-js/react": "^3.0.0",
+    "autoprefixer": "^10.4.17",
     "clsx": "^2.0.0",
+    "postcss": "^8.4.33",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.0",
